--- a/style.css
+++ b/style.css
@@ -22,10 +22,11 @@ footer {
 
 ul {
   display: grid;
-  grid-template-columns: 50px 50px 1fr 50px 50px 50px 50px;
+  grid-template-columns: auto auto 1fr auto auto auto auto;
   grid-template-areas: "about store . gmail images apps signin";
   list-style-type: none;
   padding: 0;
+  grid-gap: 10px;
 }
 
 
@@ -213,7 +214,7 @@ text-align: center;
   border-radius: 5px;
   font-size: 14px;
   margin-right: 10px;
-  /*margin-top: -15px*/
+  outline: 0;
   cursor: pointer;
 }
 
@@ -223,6 +224,7 @@ text-align: center;
   border-radius: 5px;
   font-size: 14px;
   cursor: pointer;
+  outline: 0;
 }
 
 .google-search:hover {
